# modelcraft

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE_DIAGRAMS.md  BACKEND_EXECUTIVE_SUMMARY.md  DESIGN.json  DESIGN.md  DROPDOWN_ANALYSIS_REPORT.md  END_USER_REF_EXPLORATION_REPORT.md  Jenkinsfile  LICENSE  Makefile  PERMISSION_BUNDLE_ANALYSIS.md  PERMISSION_BUNDLE_QUICK_REF.md  PERMISSION_BUNDLE_README.md  PERMISSION_BUNDLE_RESEARCH.md  PERMISSION_BUNDLE_SUMMARY.txt  PRODUCT.md  QUICK_REFERENCE.md  README.md  REGISTER_FLOW_ANALYSIS.md  REGISTER_FLOW_CHECKLIST.md  REGISTER_FLOW_QUICK_REFERENCE.txt  REGISTER_FLOW_README.md  REGISTER_FLOW_SUMMARY.md  RUNTIME_QUERY_RESULTS_ANALYSIS.md  TASK_5_6_REVIEW.md  _START_HERE.md  auth_system_complete_analysis.md  casdoor-custom-index.html  color-preview.html  demo-model-editor.html  demo-roles.html  demo-table-styles.html  docker-compose.yml  frontend-issues.md  justfile  skills-lock.json  (+1 more)
modelcraft-backend/: .dockerignore  .env.autotest.example  .env.dev  .env.dev.example  .env.docker.example  .gitignore  .golangci.yml  .testcoverage.yml  ARCHITECTURE_DIAGRAM.txt  BACKEND_DISCOVERY_REPORT.md  Dockerfile  ENDUSERPERMISSIONBUNDLE_ANALYSIS.md  ENDUSER_PROJECTS_QUICK_REFERENCE.md  ENDUSER_PROJECTS_STACK_REPORT.md  LOGIN_ENDUSER_CLEANUP_ANALYSIS.md  LOGIN_ENDUSER_EXECUTIVE_SUMMARY.md  LOGIN_ENDUSER_INDEX.md  LOGIN_ENDUSER_QUICK_REFERENCE.txt  LOGIN_ENDUSER_TEST_CASES.md  QUERIER_METHODS_REFERENCE.txt  QUICK_REFERENCE_SLUG_QUERY.md  README.md  README_SAFE_QUERIER.md  SAFE_QUERIER_PLANNING.md  go.mod  justfile  (+8 more)
(+2718 files in other folders)
